<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="10">


            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/iv_profile_avatar"
                android:layout_width="wrap_content"
                android:minHeight="150dp"
                android:minWidth="150dp"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_defaultuser"
                app:civ_border_color="@color/borderCicleImage"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:orientation="vertical">

            <EditText
                android:id="@+id/etUserNick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/nick"
                android:padding="10dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/password"
                android:padding="10dp"
                android:inputType="textPassword"
                android:singleLine="true" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/name"
                android:padding="10dp"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    style="@style/defaultButton"
                    />

                <Button
                    android:id="@+id/btnCloseSession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="10dp"
                    android:text="@string/close_session"
                    style="@style/closeSessionButton"
                    />
            </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
